Changes include:  - Increased font size from 13px to 14px, and adjusted a bunch of scaling values accordingly  - No longer support screen widths smaller than the iPhone 5 (320px)  - Made the header fixed when scrolling, so it's now a fixed height  - Added post titles to Next and Previous links for each post  - The next link now aligns to the right for the post pages and the blog pages  - Got rid of some unnecessary CSS  - H1s in the content are no longer bold  - Adjusted the spacing of the tags and aligned it to the left (was justify)  - Adjusted spacing between the header, the content, the tags, and the footer  - Adjusted spacing between paragraphs for posts

--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -1,6 +1,7 @@
 @import "common";
 
 #footer {
+    margin-top: 1em;
     clear: both; color: $darkgray; padding-bottom: 1em;
     text-align: right; position: relative; overflow: hidden;
 }
